--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Document</title>
+  <title>Access Ok | Home</title>
 </head>
 <body>
   <div class="container">
   <header>Header</header>
   <main>
-    <h1 class="game-title">Hello <span id="interactive-word">World</span>!</h1>
+    <h1>Hello World!</h1>
     <h2>Welcome to your deployed site!</h2>
   </main>
   <footer>Footer</footer>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
