Amend svg class

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </div>
   </footer>
 
-  <svg style="display: none;">
+  <svg class="svg-filter">
     <defs>
       <filter id="deuteranopia-filter">
         <feColorMatrix type="matrix"
