--- a/accessibility-guide.html
+++ b/accessibility-guide.html
@@ -16,7 +16,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container">
 				<a class="navbar-brand" href="#">
-					<img src="placeholder-logo.png" alt="Company Logo" width="30" height="30"
+					<img src="assets/images/logo.png" alt="Company Logo" width="30" height="30"
 						class="d-inline-block align-top">
 					Access Granted
 				</a>
@@ -208,9 +208,26 @@
 		  <p class="float-end mb-1">
 			<a href="#">Back to top</a>
 		  </p>
-		  <p class="mb-1">&copy; 2023 Web Inclusivity Project</p>
+		  <p class="mb-1">&copy; 2024 Access Granted Project</p>
 		</div>
 	  </footer>
+	
+	  <svg class="svg-filter">
+		<defs>
+		  <filter id="deuteranopia-filter">
+			<feColorMatrix type="matrix"
+			  values="0.625, 0.375, 0, 0, 0, 0.7, 0.3, 0, 0, 0, 0, 0.3, 0.7, 0, 0, 0, 0, 0, 1, 0" />
+		  </filter>
+		  <filter id="protanopia-filter">
+			<feColorMatrix type="matrix"
+			  values="0.567, 0.433, 0, 0, 0, 0.558, 0.442, 0, 0, 0, 0, 0.242, 0.758, 0, 0, 0, 0, 0, 1, 0" />
+		  </filter>
+		  <filter id="tritanopia-filter">
+			<feColorMatrix type="matrix"
+			  values="0.95, 0.05, 0, 0, 0, 0, 0.433, 0.567, 0, 0, 0, 0.475, 0.525, 0, 0, 0, 0, 0, 1, 0" />
+		  </filter>
+		</defs>
+	  </svg>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/js/script.js"></script>
