--- a/index.html
+++ b/index.html
@@ -15,90 +15,92 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="placeholder-logo.png" alt="Company Logo" width="30" height="30" class="d-inline-block align-top">
-          Access Granted
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#features">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Accessibility Features
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <div class="dropdown-item">
-                    <label for="fontSize" class="form-label">Font Size</label>
-                    <input type="range" class="form-range font-size-control" id="fontSize" min="12" max="24" step="1"
-                      value="16">
-                  </div>
-                </li>
-                <li>
-                  <div class="dropdown-item">
-                    <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="dyslexicFont">
-                      <label class="form-check-label" for="dyslexicFont">Dyslexic Font</label>
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/images/logo.png" alt="Access Granted Logo" width="30" height="30"
+              class="d-inline-block align-top">
+            Access Granted
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+            aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#features">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Accessibility Features
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <div class="dropdown-item">
+                      <label for="fontSize" class="form-label">Font Size</label>
+                      <input type="range" class="form-range font-size-control" id="fontSize" min="12" max="24" step="1"
+                        value="16">
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="dropdown-item">
-                    <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="highContrast">
-                      <label class="form-check-label" for="highContrast">High Contrast</label>
+                  </li>
+                  <li>
+                    <div class="dropdown-item">
+                      <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="dyslexicFont">
+                        <label class="form-check-label" for="dyslexicFont">Dyslexic Font</label>
+                      </div>
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="dropdown-item">
-                    <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="simplifiedLayout">
-                      <label class="form-check-label" for="simplifiedLayout">Simplified Layout</label>
+                  </li>
+                  <li>
+                    <div class="dropdown-item">
+                      <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="highContrast">
+                        <label class="form-check-label" for="highContrast">High Contrast</label>
+                      </div>
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="dropdown-item">
-                    <select class="form-select" id="colorblindMode" aria-label="Colorblind mode">
-                      <option selected value="">Normal Vision</option>
-                      <option value="deuteranopia">Deuteranopia</option>
-                      <option value="protanopia">Protanopia</option>
-                      <option value="tritanopia">Tritanopia</option>
-                    </select>
-                  </div>
-                </li>
-                <li>
-                  <div class="dropdown-item">
-                    <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="voiceControl">
-                      <label class="form-check-label" for="voiceControl">Voice Control</label>
+                  </li>
+                  <li>
+                    <div class="dropdown-item">
+                      <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="simplifiedLayout">
+                        <label class="form-check-label" for="simplifiedLayout">Simplified Layout</label>
+                      </div>
                     </div>
-                  </div>
-                </li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="accessibility-guide.html">Accessibility Guide</a></li>
+                  </li>
+                  <li>
+                    <div class="dropdown-item">
+                      <select class="form-select" id="colorblindMode" aria-label="Colorblind mode">
+                        <option selected value="">Normal Vision</option>
+                        <option value="deuteranopia">Deuteranopia</option>
+                        <option value="protanopia">Protanopia</option>
+                        <option value="tritanopia">Tritanopia</option>
+                      </select>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="dropdown-item">
+                      <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="voiceControl">
+                        <label class="form-check-label" for="voiceControl">Voice Control</label>
+                      </div>
+                    </div>
+                  </li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="accessibility-guide.html">Accessibility Guide</a></li>
+          </div>
         </div>
-      </div>
-      </li>
-      </ul>
-      </li>
-      </ul>
+        </li>
+        </ul>
+        </li>
+        </ul>
       </div>
       </div>
     </nav>
@@ -202,7 +204,7 @@
       <p class="float-end mb-1">
         <a href="#">Back to top</a>
       </p>
-      <p class="mb-1">&copy; 2023 Web Inclusivity Project</p>
+      <p class="mb-1">&copy; 2024 Access Granted Project</p>
     </div>
   </footer>
 
