--- a/voice.html
+++ b/voice.html
@@ -3,86 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voice Command Navigation</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Voice Command Site</title>
     <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
-    <script src="assets/js/voice.js" defer></script> <!-- Link to your voice.js -->
+    <script src="assets/js/voice_interface.js" defer></script>
 </head>
 <body>
-    <h1>Voice Command Navigation</h1>
-
-    <!-- Voice Command Button -->
-    <button id="listenButton" class="button" onclick="startListening()">Start Listening</button>
-
-    <!-- Output area for weather, time, etc. -->
-    <div id="output" class="output"></div>
+    <h1>Voice Command Site</h1>
     
-    <!-- Section for different content that will be navigated to -->
-    <div class="button-container">
-        <button class="button" onclick="navigateTo('calculator')">Calculator</button>
-        <button class="button" onclick="getWeather()">Weather</button> <!-- Changed to call getWeather directly -->
-        <button class="button" onclick="navigateTo('time')">Time</button>
-        <button class="button" onclick="navigateTo('planner')">Planner</button>
-        <button class="button" onclick="navigateTo('reminder')">Reminder</button>
+    <!-- Overlay for permission request -->
+    <div id="permissionOverlay" class="overlay" onclick="handleOverlayClick()">
+        <div class="overlay-text">Click anywhere to grant voice and location permissions</div>
     </div>
 
-    <!-- Content Sections -->
-    <div id="calculator" class="content-section" style="display:none;">
-        <h2>Calculator</h2>
-        <!-- Add Calculator content here -->
-    </div>
+    <!-- Output for debugging/logging -->
+    <div id="output" class="output"></div>
 
-    <div id="weather" class="content-section" style="display:none;">
-        <h2>Weather</h2>
-        <!-- Weather content will be displayed here -->
-        <div id="weather-output"></div> <!-- Will display the weather info here -->
-    </div>
+    <!-- Weather Output -->
+    <div id="weather-output" class="weather-output" style="margin-top: 20px; font-size: 18px; color: #333;"></div>
 
-    <div id="time" class="content-section" style="display:none;">
-        <h2>Time</h2>
-        <!-- Current Time content -->
-        <div id="time-output"></div>
-    </div>
-
-    <div id="planner" class="content-section" style="display:none;">
-        <h2>Planner</h2>
-        <!-- Planner content goes here -->
-    </div>
-
-    <div id="reminder" class="content-section" style="display:none;">
-        <h2>Reminder</h2>
-        <!-- Reminder content goes here -->
-    </div>
-
-    <!-- Style and appearance -->
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
         }
-        .button-container {
-            margin-top: 20px;
-        }
-        .button {
-            padding: 10px 20px;
-            margin: 10px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        .content-section {
-            margin-top: 20px;
-            display: none;
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 24px;
+            z-index: 1000;
         }
         .output {
             margin-top: 20px;
-            font-size: 18px;
-            font-weight: bold;
-        }
-        .listening {
-            background-color: #e74c3c;
-            color: white;
+            font-size: 16px;
+            color: #333;
         }
     </style>
-
 </body>
 </html>
