--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto" data-font-theme="default">
 
 <head>
   <meta charset="UTF-8">
@@ -94,6 +94,26 @@
                   <hr class="dropdown-divider">
                 </li>
                 <li><a class="dropdown-item" href="accessibility-guide.html">Accessibility Guide</a></li>
+                <li>
+                  <div class="dropdown-item">
+                    <label for="themeSelect" class="form-label">Theme</label>
+                    <select class="form-select" id="themeSelect" aria-label="Theme select">
+                      <option value="auto" data-bs-theme-value="auto">Auto</option>
+                      <option value="light" data-bs-theme-value="light">Light</option>
+                      <option value="dark" data-bs-theme-value="dark">Dark</option>
+                      <option value="contrast" data-bs-theme-value="contrast">High Contrast</option>
+                    </select>
+                  </div>
+                </li>
+                <li>
+                  <div class="dropdown-item">
+                    <label for="fontThemeSelect" class="form-label">Font Theme</label>
+                    <select class="form-select" id="fontThemeSelect" aria-label="Font theme select">
+                      <option value="default" data-font-theme-value="default">Default</option>
+                      <option value="dyslexic" data-font-theme-value="dyslexic">Open Dyslexic</option>
+                    </select>
+                  </div>
+                </li>
               </ul>
             </li>
           </ul>
@@ -221,8 +241,12 @@
     </defs>
   </svg>
 
+  <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom Script -->
   <script src="assets/js/script.js"></script>
+  <!-- Theme Switcher Script -->
+  <script src="assets/js/theme-switcher.js"></script>
 </body>
 
 </html>
