--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img src="assets/images/logo.png" alt="Access Granted Logo" width="30" height="30"
@@ -135,7 +135,7 @@
       </div>
     </section>
 
-    <div class="album py-5 bg-light">
+    <div class="album py-5">
       <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
           <div class="col">
