--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <title>Access Granted | Home</title>
 </head>
 
-<body>
-  <a href="#main-content" class="skip-link">Skip to main content</a>
-  <header>
-    <nav class="navbar navbar-expand-lg navbar">
+<body class="relative">
+  <a href="#main-content" class="d-none">Skip to main content</a>
+
+  <header class="fixed-top">
+    <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="index.html">
           <img src="assets/images/logo.png" alt="Access Granted Logo" width="30" height="30"
