Improve label styles

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 aria-expanded="false">
                 Accessibility Features
               </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <ul class="dropdown-menu p-3" aria-labelledby="navbarDropdown" style="width: 300px;">
                 <li>
                   <div class="dropdown-item">
                     <label for="fontSize" class="form-label">Font Size</label>
@@ -75,6 +75,7 @@
                 </li>
                 <li>
                   <div class="dropdown-item">
+                    <label for="colorblindMode" class="form-label">Colorblind Mode</label>
                     <select class="form-select" id="colorblindMode" aria-label="Colorblind mode">
                       <option selected value="">Normal Vision</option>
                       <option value="deuteranopia">Deuteranopia</option>
@@ -121,6 +122,7 @@
         </div>
       </div>
     </nav>
+  </header>
   </header>
 
   <main id="main-content">
