Style Hero Section and add images

--- a/index.html
+++ b/index.html
@@ -123,20 +123,25 @@
       </div>
     </nav>
   </header>
-  </header>
 
-  <main id="main-content">
-    <section class="py-5 text-center container">
-      <div class="row py-lg-5">
+  <main id="main-content"
+    class="pt-5"
+    style="background-image: url('assets/images/shiny1.webp'); background-position: top; background-repeat: no-repeat;">
+    <section class="py-5 text-center container" style="height: 80vh;">
+      <div class="row py-lg-5 h-75 align-items-center">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light">Welcome to Access Granted</h1>
-          <p class="lead text-muted">We're dedicated to making the web accessible for everyone.</p>
+          <h1>Welcome to Access Granted</h1>
+          <p class="lead">We're dedicated to making the web accessible for everyone.</p>
           <p>
             <a href="#features" class="btn btn-primary my-2">Explore Our Features</a>
           </p>
         </div>
+        <div class="col-lg-6 col-md-8 mx-auto">
+          <img src="assets/images/locky.webp" alt="" srcset="" class="img-fluid" height="400" width="400">
+        </div>
       </div>
     </section>
+  </main>
 
     <div class="album py-5">
       <div class="container">
