Style features section

--- a/index.html
+++ b/index.html
@@ -143,17 +143,41 @@
     </section>
   </main>
 
-    <div class="album py-5">
-      <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div class="album py-5" id="features">
+      <div class="container mt-5">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
           <div class="col">
-            <div class="card shadow-sm">
-              <img src="placeholder-image-1.jpg" class="card-img-top" alt="Feature 1 illustration">
-              <div class="card-body">
-                <h5 class="card-title">Feature 1</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content.</p>
-                <div class="d-flex justify-content-between align-items-center">
+            <div class="card h-100 shadow-lg border-0 bg-feature-card">
+              <img src="assets/images/microphone-icon.jpeg" class="card-img-top" alt="Feature 1 illustration">
+              <div class="card-body p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
+                  <p class="card-text">Unlock seamless navigation with our Voice Assistant. Designed for individuals
+                    relying on assistive technology, this feature enables hands-free control and easy interaction
+                    through
+                    voice commands. Experience the web without barriers.</p>
+                </div>
+                <div class="d-flex justify-content-end gap-3 align-items-center">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-primary">Learn More</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 shadow-lg border-0 bg-feature-card">
+              <img src="assets/images/glasses-icon.jpeg" class="card-img-top" alt="Feature 2 illustration">
+              <div class="card-body p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
+                  <p class="card-text">Enhance readability with the OpenDyslexic font. Perfect for users with dyslexia,
+                    this feature reduces visual stress and improves comprehension. Activate it to transform our text
+                    into
+                    a dyslexia-friendly format.</p>
+                </div>
+                <div class="d-flex justify-content-end gap-3 align-items-center">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic">Learn More</button>
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
                   </div>
@@ -162,31 +186,19 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow-sm">
-              <img src="placeholder-image-2.jpg" class="card-img-top" alt="Feature 2 illustration">
-              <div class="card-body">
-                <h5 class="card-title">Feature 2</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  </div>
+            <div class="card h-100 shadow-lg border-0 bg-feature-card">
+              <img src="assets/images/contrast-icon.jpeg" class="card-img-top" alt="Feature 3 illustration">
+              <div class="card-body p-4 d-flex flex-column justify-content-between">
+                <div>
+                  <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
+                  <p class="card-text">Improve visibility with High Contrast Mode. Ideal for users with color blindness
+                    or
+                    visual impairments, this feature increases text and image contrast for a clearer, more comfortable
+                    viewing experience.</p>
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow-sm">
-              <img src="placeholder-image-3.jpg" class="card-img-top" alt="Feature 3 illustration">
-              <div class="card-body">
-                <h5 class="card-title">Feature 3</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                  content.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  </div>
+                <div class="d-flex justify-content-end gap-3 align-items-center mt-auto">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-primary">Learn More</button>
                 </div>
               </div>
             </div>
