Add Join the movement paragraph

--- a/index.html
+++ b/index.html
@@ -206,6 +206,16 @@
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <p>
+        <strong>Join the Movement Towards Inclusive Design</strong> At Access Granted, we believe in creating an
+        inclusive digital environment for all users. By leveraging these innovative features, we're breaking down
+        barriers and setting new standards in accessibility. Explore our site, experience the difference, and join us in
+        the mission to make the web a more accessible place for everyone.
+      </p>
+    </div>
+
   </main>
 
   <footer class="text-muted py-5">
