Amend image file names to match conversions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/images/logo.png" alt="Access Granted Logo" width="30" height="30"
+          <img src="assets/images/logo.webp" alt="Access Granted Logo" width="30" height="30"
             class="d-inline-block align-top">
           Access Granted
         </a>
@@ -148,7 +148,7 @@
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/microphone-icon.jpeg" class="card-img-top" alt="Feature 1 illustration">
+              <img src="assets/images/microphone-icon.webp" class="card-img-top" alt="Feature 1 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
@@ -166,7 +166,7 @@
           </div>
           <div class="col">
             <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/glasses-icon.jpeg" class="card-img-top" alt="Feature 2 illustration">
+              <img src="assets/images/glasses-icon.webp" class="card-img-top" alt="Feature 2 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
@@ -184,7 +184,7 @@
           </div>
           <div class="col">
             <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/contrast-icon.jpeg" class="card-img-top" alt="Feature 3 illustration">
+              <img src="assets/images/contrast-icon.webp" class="card-img-top" alt="Feature 3 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
