Amend alignment of hero background

--- a/index.html
+++ b/index.html
@@ -124,9 +124,7 @@
     </nav>
   </header>
 
-  <main id="main-content"
-    class="pt-5"
-    style="background-image: url('assets/images/shiny1.webp'); background-position: top; background-repeat: no-repeat;">
+  <main id="main-content" class="pt-5 main-background">
     <section class="py-5 text-center container" style="height: 80vh;">
       <div class="row py-lg-5 h-75 align-items-center">
         <div class="col-lg-6 col-md-8 mx-auto">
@@ -143,75 +141,75 @@
     </section>
   </main>
 
-    <div class="album py-5" id="features">
-      <div class="container mt-5">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-          <div class="col">
-            <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/microphone-icon.jpeg" class="card-img-top" alt="Feature 1 illustration">
-              <div class="card-body p-4 d-flex flex-column justify-content-between">
-                <div>
-                  <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
-                  <p class="card-text">Unlock seamless navigation with our Voice Assistant. Designed for individuals
-                    relying on assistive technology, this feature enables hands-free control and easy interaction
-                    through
-                    voice commands. Experience the web without barriers.</p>
-                </div>
-                <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-primary">Learn More</button>
-                </div>
+  <div class="album py-5" id="features">
+    <div class="container mt-5">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 shadow-lg border-0 bg-feature-card">
+            <img src="assets/images/microphone-icon.jpeg" class="card-img-top" alt="Feature 1 illustration">
+            <div class="card-body p-4 d-flex flex-column justify-content-between">
+              <div>
+                <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
+                <p class="card-text">Unlock seamless navigation with our Voice Assistant. Designed for individuals
+                  relying on assistive technology, this feature enables hands-free control and easy interaction
+                  through
+                  voice commands. Experience the web without barriers.</p>
+              </div>
+              <div class="d-flex justify-content-end gap-3 align-items-center">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <button type="button" class="btn btn-sm btn-primary">Learn More</button>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/glasses-icon.jpeg" class="card-img-top" alt="Feature 2 illustration">
-              <div class="card-body p-4 d-flex flex-column justify-content-between">
-                <div>
-                  <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
-                  <p class="card-text">Enhance readability with the OpenDyslexic font. Perfect for users with dyslexia,
-                    this feature reduces visual stress and improves comprehension. Activate it to transform our text
-                    into
-                    a dyslexia-friendly format.</p>
-                </div>
-                <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic">Learn More</button>
-                </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-lg border-0 bg-feature-card">
+            <img src="assets/images/glasses-icon.jpeg" class="card-img-top" alt="Feature 2 illustration">
+            <div class="card-body p-4 d-flex flex-column justify-content-between">
+              <div>
+                <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
+                <p class="card-text">Enhance readability with the OpenDyslexic font. Perfect for users with dyslexia,
+                  this feature reduces visual stress and improves comprehension. Activate it to transform our text
+                  into
+                  a dyslexia-friendly format.</p>
+              </div>
+              <div class="d-flex justify-content-end gap-3 align-items-center">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic">Learn More</button>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card h-100 shadow-lg border-0 bg-feature-card">
-              <img src="assets/images/contrast-icon.jpeg" class="card-img-top" alt="Feature 3 illustration">
-              <div class="card-body p-4 d-flex flex-column justify-content-between">
-                <div>
-                  <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
-                  <p class="card-text">Improve visibility with High Contrast Mode. Ideal for users with color blindness
-                    or
-                    visual impairments, this feature increases text and image contrast for a clearer, more comfortable
-                    viewing experience.</p>
-                </div>
-                <div class="d-flex justify-content-end gap-3 align-items-center mt-auto">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-primary">Learn More</button>
-                </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 shadow-lg border-0 bg-feature-card">
+            <img src="assets/images/contrast-icon.jpeg" class="card-img-top" alt="Feature 3 illustration">
+            <div class="card-body p-4 d-flex flex-column justify-content-between">
+              <div>
+                <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
+                <p class="card-text">Improve visibility with High Contrast Mode. Ideal for users with color blindness
+                  or
+                  visual impairments, this feature increases text and image contrast for a clearer, more comfortable
+                  viewing experience.</p>
+              </div>
+              <div class="d-flex justify-content-end gap-3 align-items-center mt-auto">
+                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                <button type="button" class="btn btn-sm btn-primary">Learn More</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="container">
-      <p>
-        <strong>Join the Movement Towards Inclusive Design</strong> At Access Granted, we believe in creating an
-        inclusive digital environment for all users. By leveraging these innovative features, we're breaking down
-        barriers and setting new standards in accessibility. Explore our site, experience the difference, and join us in
-        the mission to make the web a more accessible place for everyone.
-      </p>
-    </div>
+  <div class="container">
+    <p>
+      <strong>Join the Movement Towards Inclusive Design</strong> At Access Granted, we believe in creating an
+      inclusive digital environment for all users. By leveraging these innovative features, we're breaking down
+      barriers and setting new standards in accessibility. Explore our site, experience the difference, and join us in
+      the mission to make the web a more accessible place for everyone.
+    </p>
+  </div>
 
   </main>
 
