Amend navigation links

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="resources.html">Resources</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#features">Features</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -238,9 +238,9 @@
           <h5>Site Map</h5>
           <ul class="list-unstyled">
             <li><a href="#" class="text-muted">Home</a></li>
-            <li><a href="#about" class="text-muted">About</a></li>
-            <li><a href="#features" class="text-muted">Features</a></li>
-            <li><a href="#contact" class="text-muted">Contact</a></li>
+            <li><a href="about.html" class="text-muted">About</a></li>
+            <li><a href="resources.html" class="text-muted">Resources</a></li>
+            <li><a href="contact.html" class="text-muted">Contact</a></li>
           </ul>
         </div>
       </div>
