--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="relative">
   <a href="#main-content" class="d-none">Skip to main content</a>
 
-  <header class="fixed-top">
+  <header class="fixed-top header-background shadow">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -26,7 +26,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="#about">About</a>
             </li>
