Add Fontawesome icons

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <img src="assets/images/logo.png" alt="Access Granted Logo" width="30" height="30"
-            class="d-inline-block align-top">
+          <img src="assets/images/logo.png" alt="Access Granted Logo" width="30" height="30" class="d-inline-block align-top">
           Access Granted
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
@@ -28,18 +27,18 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link" href="#about"><i class="fas fa-info-circle"></i> About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#features">Features</a>
+              <a class="nav-link" href="#features"><i class="fas fa-star"></i> Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Accessibility Features
+                <i class="fas fa-universal-access"></i> Accessibility Features
               </a>
               <ul class="dropdown-menu p-3" aria-labelledby="navbarDropdown" style="width: 300px;">
                 <li>
@@ -95,7 +94,7 @@
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="accessibility-guide.html">Accessibility Guide</a></li>
+                <li><a class="dropdown-item" href="accessibility-guide.html"><i class="fas fa-book"></i> Accessibility Guide</a></li>
                 <li>
                   <div class="dropdown-item">
                     <label for="themeSelect" class="form-label">Theme</label>
@@ -131,7 +130,7 @@
           <h1>Welcome to Access Granted</h1>
           <p class="lead">We're dedicated to making the web accessible for everyone.</p>
           <p>
-            <a href="#features" class="btn btn-primary my-2">Explore Our Features</a>
+            <a href="#features" class="btn btn-primary my-2"><i class="fas fa-arrow-down"></i> Explore Our Features</a>
           </p>
         </div>
         <div class="col-lg-6 col-md-8 mx-auto">
@@ -149,15 +148,15 @@
             <img src="assets/images/microphone-icon.jpeg" class="card-img-top" alt="Feature 1 illustration">
             <div class="card-body p-4 d-flex flex-column justify-content-between">
               <div>
-                <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
+                <h5 class="card-title"><i class="fas fa-microphone"></i> Voice Assistant: Your Personal Guide</h5>
                 <p class="card-text">Unlock seamless navigation with our Voice Assistant. Designed for individuals
                   relying on assistive technology, this feature enables hands-free control and easy interaction
                   through
                   voice commands. Experience the web without barriers.</p>
               </div>
               <div class="d-flex justify-content-end gap-3 align-items-center">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-primary">Learn More</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
+                <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn More</button>
               </div>
             </div>
           </div>
@@ -167,15 +166,15 @@
             <img src="assets/images/glasses-icon.jpeg" class="card-img-top" alt="Feature 2 illustration">
             <div class="card-body p-4 d-flex flex-column justify-content-between">
               <div>
-                <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
+                <h5 class="card-title"><i class="fas fa-glasses"></i> OpenDyslexic: Read with Ease</h5>
                 <p class="card-text">Enhance readability with the OpenDyslexic font. Perfect for users with dyslexia,
                   this feature reduces visual stress and improves comprehension. Activate it to transform our text
                   into
                   a dyslexia-friendly format.</p>
               </div>
               <div class="d-flex justify-content-end gap-3 align-items-center">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic">Learn More</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
+                <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i class="fas fa-info-circle"></i> Learn More</button>
               </div>
             </div>
           </div>
@@ -185,15 +184,15 @@
             <img src="assets/images/contrast-icon.jpeg" class="card-img-top" alt="Feature 3 illustration">
             <div class="card-body p-4 d-flex flex-column justify-content-between">
               <div>
-                <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
+                <h5 class="card-title"><i class="fas fa-adjust"></i> High Contrast Mode: See It Clearly</h5>
                 <p class="card-text">Improve visibility with High Contrast Mode. Ideal for users with color blindness
                   or
                   visual impairments, this feature increases text and image contrast for a clearer, more comfortable
                   viewing experience.</p>
               </div>
               <div class="d-flex justify-content-end gap-3 align-items-center mt-auto">
-                <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-sm btn-primary">Learn More</button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
+                <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn More</button>
               </div>
             </div>
           </div>
@@ -210,18 +209,16 @@
       the mission to make the web a more accessible place for everyone.
     </p>
   </div>
-
-  </main>
-
+</main>
   <footer class="text-muted py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
           <h5>Resources</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-muted">Documentation</a></li>
-            <li><a href="#" class="text-muted">Tutorials</a></li>
-            <li><a href="#" class="text-muted">Support</a></li>
+            <li><a href="#" class="text-muted"><i class="fas fa-book"></i> Documentation</a></li>
+            <li><a href="#" class="text-muted"><i class="fas fa-chalkboard-teacher"></i> Tutorials</a></li>
+            <li><a href="#" class="text-muted"><i class="fas fa-life-ring"></i> Support</a></li>
           </ul>
         </div>
         <div class="col-md-4">
@@ -235,15 +232,15 @@
         <div class="col-md-4">
           <h5>Site Map</h5>
           <ul class="list-unstyled">
-            <li><a href="#" class="text-muted">Home</a></li>
-            <li><a href="#about" class="text-muted">About</a></li>
-            <li><a href="#features" class="text-muted">Features</a></li>
-            <li><a href="#contact" class="text-muted">Contact</a></li>
+            <li><a href="#" class="text-muted"><i class="fas fa-home"></i> Home</a></li>
+            <li><a href="#about" class="text-muted"><i class="fas fa-info-circle"></i> About</a></li>
+            <li><a href="#features" class="text-muted"><i class="fas fa-star"></i> Features</a></li>
+            <li><a href="#contact" class="text-muted"><i class="fas fa-envelope"></i> Contact</a></li>
           </ul>
         </div>
       </div>
       <p class="float-end mb-1">
-        <a href="#">Back to top</a>
+        <a href="#"><i class="fas fa-arrow-up"></i> Back to top</a>
       </p>
       <p class="mb-1">&copy; 2024 Access Granted Project</p>
     </div>
@@ -265,7 +262,8 @@
       </filter>
     </defs>
   </svg>
-
+  <!-- Fontawesome icons -->
+  <script src="https://kit.fontawesome.com/8f0b8db894.js" crossorigin="anonymous"></script>
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Custom Script -->
