--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <h1>Welcome to Access Granted</h1>
           <p class="lead">We're dedicated to making the web accessible for everyone.</p>
           <p>
-            <a href="#features" class="btn btn-primary my-2"><i class="fas fa-arrow-down"></i> Explore Our Features</a>
+            <a href="#features" class="btn btn-primary my-2">Explore Our Features</a>
           </p>
         </div>
         <div class="col-lg-6 col-md-8 mx-auto">
