Remove additional unnesecary fa icons

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               <img src="assets/images/microphone-icon.jpeg" class="card-img-top" alt="Feature 1 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
-                  <h5 class="card-title"><i class="fas fa-microphone"></i> Voice Assistant: Your Personal Guide</h5>
+                  <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
                   <p class="card-text">Unlock seamless navigation with our Voice Assistant. Designed for individuals
                     relying on assistive technology, this feature enables hands-free control and easy interaction
                     through
@@ -169,7 +169,7 @@
               <img src="assets/images/glasses-icon.jpeg" class="card-img-top" alt="Feature 2 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
-                  <h5 class="card-title"><i class="fas fa-glasses"></i> OpenDyslexic: Read with Ease</h5>
+                  <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
                   <p class="card-text">Enhance readability with the OpenDyslexic font. Perfect for users with dyslexia,
                     this feature reduces visual stress and improves comprehension. Activate it to transform our text
                     into
@@ -189,7 +189,7 @@
               <img src="assets/images/contrast-icon.jpeg" class="card-img-top" alt="Feature 3 illustration">
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
-                  <h5 class="card-title"><i class="fas fa-adjust"></i> High Contrast Mode: See It Clearly</h5>
+                  <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
                   <p class="card-text">Improve visibility with High Contrast Mode. Ideal for users with color blindness
                     or
                     visual impairments, this feature increases text and image contrast for a clearer, more comfortable
