Add background toggling to navbar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="relative">
   <a href="#main-content" class="d-none">Skip to main content</a>
 
-  <header class="fixed-top header-background shadow">
+  <header class="fixed-top">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="index.html">
@@ -125,7 +125,7 @@
     </nav>
   </header>
 
-  <main id="main-content" class="pt-5">
+  <main id="main-content">
     <section class="py-5 text-center container-fluid main-background" style="height: 80vh;">
       <div class="row py-lg-5 h-75 align-items-center">
         <div class="col-lg-6 col-md-8 mx-auto">
@@ -278,6 +278,8 @@
   <script src="assets/js/script.js"></script>
   <!-- Theme Switcher Script -->
   <script src="assets/js/theme-switcher.js"></script>
+  <!-- Toggle navigation bar background -->
+   <script src="assets/js/navbar-background-toggler.js"></script>
 </body>
 
 </html>
