Improve alignment of hero section

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
   </header>
 
   <main id="main-content">
-    <section class="py-5 text-center container-fluid main-background" style="height: 80vh;">
-      <div class="row py-lg-5 h-75 align-items-center">
+    <section class="p-5 text-center text-md-end container-fluid main-background d-flex align-items-center" style="height: 80vh;">
+      <div class="row w-100 align-items-center">
         <div class="col-lg-6 col-md-8 mx-auto">
           <h1>Welcome to Access Granted</h1>
-          <p class="lead">We're dedicated to making the web accessible for everyone.</p>
+          <p class="fw-medium">We're dedicated to making the web accessible for everyone.</p>
           <p>
             <a href="#features" class="btn btn-primary my-2">Explore Our Features</a>
           </p>
@@ -279,7 +279,7 @@
   <!-- Theme Switcher Script -->
   <script src="assets/js/theme-switcher.js"></script>
   <!-- Toggle navigation bar background -->
-   <script src="assets/js/navbar-background-toggler.js"></script>
+  <script src="assets/js/navbar-background-toggler.js"></script>
 </body>
 
 </html>
