--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         <div class="collapse navbar-collapse" id="navbarContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="resources.html">Resources</a>
+              <a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              aria-expanded="false">
                 <i class="fas fa-universal-access"></i> Accessibility Features
               </a>
               <ul class="dropdown-menu p-3" aria-labelledby="navbarDropdown" style="width: 300px;">
