--- a/calculator.html
+++ b/calculator.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Voice-Controlled Calculator</title>
+    <link rel='shortcut icon' href="assets/images/logo.webp">
     <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
     <script src="assets/js/calculator.js"></script> <!-- Link to external JS file -->
     <style>
