--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </div>
     </section>
 
-    <div class="album py-5" id="features">
+        <div class="album py-5" id="features">
       <div class="container mt-5">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
           <div class="col">
@@ -150,16 +150,12 @@
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">Voice Assistant: Your Personal Guide</h5>
-                  <p class="card-text">Unlock seamless navigation with our Voice Assistant. Designed for individuals
-                    relying on assistive technology, this feature enables hands-free control and easy interaction
-                    through
-                    voice commands. Experience the web without barriers.</p>
+                  <h6 class="card-subtitle mb-2 text-muted">Meet Mikey the Mic!</h6>
+                  <p class="card-text">Unlock seamless navigation with our Voice Assistant, Mikey the Mic. Designed for individuals relying on assistive technology, this feature enables hands-free control and easy interaction through voice commands. Experience the web without barriers.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i>
-                    View</button>
-                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
-                    More</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
+                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn More</button>
                 </div>
               </div>
             </div>
@@ -170,16 +166,12 @@
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">OpenDyslexic: Read with Ease</h5>
-                  <p class="card-text">Enhance readability with the OpenDyslexic font. Perfect for users with dyslexia,
-                    this feature reduces visual stress and improves comprehension. Activate it to transform our text
-                    into
-                    a dyslexia-friendly format.</p>
+                  <h6 class="card-subtitle mb-2 text-muted">Say Hi to Glassy with the Glasses!</h6>
+                  <p class="card-text">Enhance readability with the OpenDyslexic font, guided by Glassy with the Glasses. Perfect for users with dyslexia, this feature reduces visual stress and improves comprehension. Activate it to transform our text into a dyslexia-friendly format.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i>
-                    View</button>
-                  <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i
-                      class="fas fa-info-circle"></i> Learn More</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
+                  <button type="button" class="btn btn-sm btn-primary" id="enable-dyslexic"><i class="fas fa-info-circle"></i> Learn More</button>
                 </div>
               </div>
             </div>
@@ -190,16 +182,12 @@
               <div class="card-body p-4 d-flex flex-column justify-content-between">
                 <div>
                   <h5 class="card-title">High Contrast Mode: See It Clearly</h5>
-                  <p class="card-text">Improve visibility with High Contrast Mode. Ideal for users with color blindness
-                    or
-                    visual impairments, this feature increases text and image contrast for a clearer, more comfortable
-                    viewing experience.</p>
+                  <h6 class="card-subtitle mb-2 text-muted">Meet Spikey the Hedgehog!</h6>
+                  <p class="card-text">Improve visibility with High Contrast Mode, thanks to Spikey the Hedgehog. Ideal for users with color blindness or visual impairments, this feature increases text and image contrast for a clearer, more comfortable viewing experience.</p>
                 </div>
                 <div class="d-flex justify-content-end gap-3 align-items-center mt-auto">
-                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i>
-                    View</button>
-                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn
-                    More</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fas fa-eye"></i> View</button>
+                  <button type="button" class="btn btn-sm btn-primary"><i class="fas fa-info-circle"></i> Learn More</button>
                 </div>
               </div>
             </div>
